tests: shell: run-tests.sh: use src/nft binary by default
Better use the local tree nft binary rather than the installed one.

Requested-by: Pablo Neira Ayuso <pablo@netfilter.org>
Signed-off-by: Arturo Borrero Gonzalez <arturo.borrero.glez@gmail.com>
Signed-off-by: Pablo Neira Ayuso <pablo@netfilter.org>

--- a/tests/shell/README
+++ b/tests/shell/README
@@ -20,4 +20,6 @@ Also, test-files will receive the environment variable $NFT which contains the
 path to the nftables binary being tested.
 
 You can pass an arbitrary $NFT value as well:
- % NFT=../../src/nft ./run-tests.sh
+ % NFT=/usr/local/sbin/nft ./run-tests.sh
+
+By default the tests are run with the nft binary at '../../src/nft'
